--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
       - MARIADB_USER=bn_redmine
       - MARIADB_DATABASE=bitnami_redmine
     volumes:
-      # - 'D:\GoogleDrive\Prj\Redmine\mariadb_data:/bitnami'
-      - 'D:\GoogleDrive\Prj\Redmine\data\plugins:/usr/src/redmine/plugins'
-      - 'D:\GoogleDrive\Prj\Redmine\data\themes:/usr/src/redmine/public/themes'
-      
+      # コンテナからデータを引っ張る用のフォルダ
+      - 'D:\GoogleDrive\Prj\Redmine\data:/share'
+      # データ本体 GoogleDriveでバックアップ
+      - 'D:\GoogleDrive\Prj\Redmine\data\mariadb:/bitnami/mariadb'
       
   redmine:
     image: docker.io/bitnami/redmine:4.2.5
@@ -21,11 +21,15 @@ services:
     ports:
       - '8888:3000'
     volumes:
-      # - 'D:\GoogleDrive\Prj\Redmine\redmine_data:/bitnami'
-      # - 'D:\GoogleDrive\Prj\Redmine\bitnami_data:/opt/bitnami'
-      - 'D:\GoogleDrive\Prj\Redmine\data\db:/var/lib/mysql'
+      # コンテナからデータを引っ張る用のフォルダ
+      - 'D:\GoogleDrive\Prj\Redmine\data:/share'
+      # データ本体 GoogleDriveでバックアップ
+      - 'D:\GoogleDrive\Prj\Redmine\data\themes:/opt/bitnami/redmine/public/themes'
+      - 'D:\GoogleDrive\Prj\Redmine\data\db:/opt/bitnami/redmine/public/db'
+      - 'D:\GoogleDrive\Prj\Redmine\data\files:/opt/bitnami/redmine/public/files'
+      - 'D:\GoogleDrive\Prj\Redmine\data\plugins:/opt/bitnami/redmine/public/plugins'
+
     depends_on:
       - mariadb
     tty:
       true
-      
