--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.8'
 services:
   mariadb:
     image: docker.io/bitnami/mariadb:10.3
+    # 自動起動
+    restart: always
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
       - MARIADB_USER=bn_redmine
@@ -14,6 +16,8 @@ services:
       
   redmine:
     image: docker.io/bitnami/redmine:4.2.5
+    # 自動起動
+    restart: always
     environment:
       - REDMINE_DB_USERNAME=bn_redmine
       - REDMINE_DB_NAME=bitnami_redmine
